--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,20 +11,14 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Services"
+    - title: "채널나인"
       section: services
-    - title: "Portfolio"
+    - title: "fromis_9의 탄생"
       section: portfolio
-    - title: "About"
+    - title: "프로미스나인의 대해"
       section: about
-    - title: "Timeline"
-      section: timeline
-    - title: "Team"
-      section: team
     - title: "Contact"
       section: contact
-    - title: "Theme Source"
-      url: https://github.com/raviriley/agency-jekyll-theme/
 en-US:
   <<: *DEFAULT_EN
 en-CA:
